# sladk-agents

./: .env.sample  .gitignore  AGENTS.md.sample  Dockerfile  LICENSE  README.md  app.py  app_oauth.py  manifest.json  mcpServers.json.sample  pyproject.toml  requirements.txt
.github/workflows/: release.yml
ai/: file_ingestion.py  llm_caller.py  mcp_config_loader.py  slack_streaming.py  utils.py
ai/tools/: custom_tools.py
fluxcd/: README.md  gitrepository.yaml  kustomization.yaml  namespace-kustomization.yaml  sladksecret.yaml
fluxcd/apps/: defaults.yaml  kustomization.yaml
fluxcd/apps/base/: app.yaml  kustomization.yaml
fluxcd/apps/overlays/main/: kustomization.yaml  patch.yaml
fluxcd/helm/sladk/: Chart.yaml  values.yaml
fluxcd/helm/sladk/templates/: deployment.yaml  hpa.yaml
fluxcd/namespace/: namespace.yaml
listeners/: __init__.py  shared.py
listeners/actions/: __init__.py  actions.py
listeners/assistant/: __init__.py  assistant_thread_started.py  message.py
listeners/events/: __init__.py  app_mentioned.py
tests/: test_file_ingestion.py  test_mcp_config_loader.py  test_slack_streaming.py  test_utils.py
